--- a/public/index.html
+++ b/public/index.html
@@ -10,6 +10,7 @@
       content="Enter Time Well Spent website"
     />
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
+    <link rel="stylesheet" href="css/style.css">
     <title>Time Well Spent</title>
   </head>
   <body>
